Colaboratory kullanılarak oluşturuldu

--- a/One_Click_AI_Bot.ipynb
+++ b/One_Click_AI_Bot.ipynb
@@ -17,6 +17,8 @@
         "\n",
         "This is a one click Ai Bot based on GPT algorithm. This is specifically called as Vicuna-13b. It's like ChatGPT. You can use it to achieve many tasks like code writing talking etc. It's not able to speak languages other than English. But it might be able to understand other languages.\n",
         "\n",
+        "Use GPU to run it. Choose it from resources.\n",
+        "\n",
         "Execute the cell below and wait until it generates a link for public on gradio.live. Then visit there."
       ],
       "metadata": {
@@ -49,7 +51,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOL1NiiKMk0CSgfxVd9YyAh",
+      "authorship_tag": "ABX9TyO1d50yKLsWXCvj1NYdOkI4",
       "include_colab_link": true
     },
     "gpuClass": "standard",
